transfert du portfolio en ejs

--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "portfolio de Marie-Maxime Tanguay réalisé en EJS et node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server",
+    "production": "webpack -p",
+    "postinstall": "webpack -p",
+    "start": "node server.js"
   },
   "author": "Marie-Maxime Tanguay",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "firebase": "^3.7.5",
+    "lodash": "^4.17.4",
+    "nodemailer": "^4.0.0",
+    "webpack": "^1.14.0",
+    "babel-loader": "^6.2.10"
+
+  },
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
