--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "firebase": "^3.7.5",
     "lodash": "^4.17.4",
     "nodemailer": "^4.0.0",
-    "webpack": "^1.14.0",
-    "babel-loader": "^6.2.10"
+    "html-webpack-plugin": "^2.26.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
+    "webpack": "^1.14.0"
 
   },
   "devDependencies": {
